[gd_scene load_steps=13 format=3 uid="uid://c32ywwqsseyjr"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_cjnrv"]
[ext_resource type="PackedScene" uid="uid://capb0aa54sbax" path="res://menu/prefabs/volume_controls.tscn" id="2_atbtv"]
[ext_resource type="Texture2D" uid="uid://c1ojmy6qm13o6" path="res://assets/images/terrain/rock_purple.png" id="2_dysu6"]
[ext_resource type="Texture2D" uid="uid://dl2mb1sk8mrg6" path="res://assets/images/main_character.png" id="3_3260i"]
[ext_resource type="Texture2D" uid="uid://34x88dg5n031" path="res://assets/images/terrain/lava_bubble.png" id="3_d7w0w"]
[ext_resource type="Texture2D" uid="uid://ciunk50twg4ys" path="res://assets/images/magnet/chain_full.png" id="3_yo8gf"]
[ext_resource type="Texture2D" uid="uid://mw506h8ila02" path="res://assets/images/magnet/red_blue_magnet.png" id="4_u5q53"]
[ext_resource type="Texture2D" uid="uid://yirqjuylji5j" path="res://assets/images/enemies/grey_shark.png" id="7_fdbca"]

[sub_resource type="Gradient" id="Gradient_svxm4"]
offsets = PackedFloat32Array(0.00165017, 1)
colors = PackedColorArray(1, 1, 1, 0.215686, 1, 1, 1, 0.596078)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vkakj"]
gradient = SubResource("Gradient_svxm4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_whpf2"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1000, 1, 1)
gravity = Vector3(0, -100, 0)
scale_min = 0.1
scale_max = 0.3
color_initial_ramp = SubResource("GradientTexture1D_vkakj")
turbulence_enabled = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ws654"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1000, 1, 1)
gravity = Vector3(0, -100, 0)
scale_min = 0.1
scale_max = 0.3
color_initial_ramp = SubResource("GradientTexture1D_vkakj")
turbulence_enabled = true

[node name="MainMenu" type="Control" node_paths=PackedStringArray("buttons_with_sounds") groups=["menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cjnrv")
buttons_with_sounds = [NodePath("Buttons/PlayButton"), NodePath("Buttons/RulesButton"), NodePath("Buttons/CreditsButton"), NodePath("Buttons/ExitButton")]

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background2" type="Node2D" parent="."]

[node name="RockPurple" type="Sprite2D" parent="Background2"]
position = Vector2(108, 20)
texture = ExtResource("2_dysu6")

[node name="RockPurple2" type="Sprite2D" parent="Background2"]
position = Vector2(-17, 155)
texture = ExtResource("2_dysu6")

[node name="RockPurple3" type="Sprite2D" parent="Background2"]
position = Vector2(343, 91)
texture = ExtResource("2_dysu6")

[node name="RockPurple4" type="Sprite2D" parent="Background2"]
position = Vector2(240, 282)
texture = ExtResource("2_dysu6")

[node name="RockPurple5" type="Sprite2D" parent="Background2"]
position = Vector2(527, 218)
texture = ExtResource("2_dysu6")

[node name="RockPurple6" type="Sprite2D" parent="Background2"]
position = Vector2(1010, 61)
texture = ExtResource("2_dysu6")

[node name="RockPurple7" type="Sprite2D" parent="Background2"]
position = Vector2(816, 125)
texture = ExtResource("2_dysu6")

[node name="RockPurple8" type="Sprite2D" parent="Background2"]
position = Vector2(1064, 300)
texture = ExtResource("2_dysu6")

[node name="RockPurple9" type="Sprite2D" parent="Background2"]
position = Vector2(843, 361)
texture = ExtResource("2_dysu6")

[node name="RockPurple10" type="Sprite2D" parent="Background2"]
position = Vector2(693, 370)
texture = ExtResource("2_dysu6")

[node name="RockPurple11" type="Sprite2D" parent="Background2"]
position = Vector2(433, 468)
texture = ExtResource("2_dysu6")

[node name="RockPurple12" type="Sprite2D" parent="Background2"]
position = Vector2(61, 505)
texture = ExtResource("2_dysu6")

[node name="RockPurple13" type="Sprite2D" parent="Background2"]
position = Vector2(278, 594)
texture = ExtResource("2_dysu6")

[node name="RockPurple14" type="Sprite2D" parent="Background2"]
position = Vector2(674, 594)
texture = ExtResource("2_dysu6")

[node name="RockPurple15" type="Sprite2D" parent="Background2"]
position = Vector2(963, 623)
texture = ExtResource("2_dysu6")

[node name="RockPurple16" type="Sprite2D" parent="Background2"]
position = Vector2(1207, 577)
texture = ExtResource("2_dysu6")

[node name="RockPurple17" type="Sprite2D" parent="Background2"]
position = Vector2(802, 793)
texture = ExtResource("2_dysu6")

[node name="RockPurple18" type="Sprite2D" parent="Background2"]
position = Vector2(478, 775)
texture = ExtResource("2_dysu6")

[node name="RockPurple20" type="Sprite2D" parent="Background2"]
position = Vector2(1226, 150)
texture = ExtResource("2_dysu6")

[node name="RockPurple19" type="Sprite2D" parent="Background2"]
position = Vector2(145, 784)
texture = ExtResource("2_dysu6")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(629, 835)
amount = 32
process_material = SubResource("ParticleProcessMaterial_whpf2")
texture = ExtResource("3_d7w0w")
lifetime = 40.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Line2D" type="Line2D" parent="."]
texture_repeat = 2
position = Vector2(286, 480)
scale = Vector2(0.414176, 0.414176)
points = PackedVector2Array(371.823, 205.227, 1255.5, -164.181)
width = 100.0
texture = ExtResource("3_yo8gf")
texture_mode = 1

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(272, 493)
scale = Vector2(0.414176, 0.414176)
texture = ExtResource("3_3260i")

[node name="RedBlueMagnet" type="Sprite2D" parent="."]
position = Vector2(828, 432)
rotation = -3.94147
scale = Vector2(0.48134, 0.48134)
texture = ExtResource("4_u5q53")

[node name="GreyShark" type="Sprite2D" parent="."]
position = Vector2(776, 716)
rotation = 0.588845
scale = Vector2(0.43679, 0.43679)
texture = ExtResource("7_fdbca")
flip_h = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(629, 835)
amount = 32
process_material = SubResource("ParticleProcessMaterial_ws654")
texture = ExtResource("3_d7w0w")
lifetime = 40.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.5
offset_top = 55.0
offset_right = 547.5
offset_bottom = 192.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 120
text = "Magna Fisher"
horizontal_alignment = 1

[node name="VolumeControls" parent="." instance=ExtResource("2_atbtv")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -112.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
focus_neighbor_left = NodePath("../Buttons/ExitButton")
focus_neighbor_top = NodePath("../Buttons/ExitButton")
focus_neighbor_right = NodePath("../Buttons/PlayButton")
focus_neighbor_bottom = NodePath("../Buttons/PlayButton")
focus_next = NodePath("../Buttons/PlayButton")
focus_previous = NodePath("../Buttons/ExitButton")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -68.0
offset_right = -88.0
offset_bottom = 144.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play Game"

[node name="RulesButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "How To Play
"

[node name="CreditsButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/RulesButton" to="." method="_on_rules_button_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
